Fix KDE crash

SettingGetterImplKDE expects to be able to post a shutdown task on
destruction, but that only works if there's actually a thread to post
tasks to. This CL destroys the SystemNetworkContextManager (Which now
owns SettingGetterImplKDE, and all other proxy-config classes) before
threads are torn down to fix the crash.

Bug: 801554
Change-Id: I167512fd831e9c01e9eaef95f3293d2cd8d8dbbd
Reviewed-on: https://chromium-review.googlesource.com/864904
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Eric Roman <eroman@chromium.org>
Reviewed-by: Randy Smith <rdsmith@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529894}
Former-commit-id: 02bf09f46014c1c8f8ed0680b7789942a7635180